--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.universalinfatech.apps.universallocator">
+    <uses-sdk tools:overrideLibrary="com.facebook,com.facebook.login,com.facebook.common,com.facebook.core,android.support.customtabs,com.google.android.gms.play_services,com.google.android.gms.ads.impl,com.google.android.gms.ads,com.google.android.gms.analytics,com.google.android.gms.appinvite,com.google.android.gms.auth.api,     com.google.android.gms.auth,com.google.android.gms.cast.framework,com.google.android.gms.cast,com.google.android.gms.clearcut,com.google.firebase.remoteconfig,com.google.firebase.crash,com.google.android.gms.contextmanager,com.google.firebase.auth.api,     com.google.firebase.database,com.google.firebase.database.connection,com.google.firebase.dynamiclinks,com.google.firebase.messaging,com.google.firebase.storage,com.google.android.gms.fitness,com.google.android.gms.games,com.google.android.gms.drive,com.google.android.gms.gass,com.google.android.gms.gcm,     com.google.android.gms.wallet,com.google.android.gms.wearable,com.google.android.gms.vision,com.google.android.gms.tasks,com.google.android.gms.tagmanager,com.google.android.gms.safetynet,com.google.android.gms.panorama,com.google.android.gms.plus,com.google.android.gms.maps,com.google.android.gms.nearby,     com.google.android.gms.instantapps,com.google.android.gms.identity,com.google.android.gms.iid,com.google.android.gms.tagmanager.impl,com.google.android.gms.appindexing,com.google.android.gms.location" />
 
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    x
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -13,11 +15,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <activity
             android:name=".activities.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar"></activity>
+
         <activity android:name=".activities.SplashActivity"></activity>
+
         <activity android:name=".activities.SignUpActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
