--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.universalinfatech.apps.universallocator">
+
     <uses-sdk tools:overrideLibrary="com.facebook,com.facebook.login,com.facebook.common,com.facebook.core,android.support.customtabs,com.google.android.gms.play_services,com.google.android.gms.ads.impl,com.google.android.gms.ads,com.google.android.gms.analytics,com.google.android.gms.appinvite,com.google.android.gms.auth.api,     com.google.android.gms.auth,com.google.android.gms.cast.framework,com.google.android.gms.cast,com.google.android.gms.clearcut,com.google.firebase.remoteconfig,com.google.firebase.crash,com.google.android.gms.contextmanager,com.google.firebase.auth.api,     com.google.firebase.database,com.google.firebase.database.connection,com.google.firebase.dynamiclinks,com.google.firebase.messaging,com.google.firebase.storage,com.google.android.gms.fitness,com.google.android.gms.games,com.google.android.gms.drive,com.google.android.gms.gass,com.google.android.gms.gcm,     com.google.android.gms.wallet,com.google.android.gms.wearable,com.google.android.gms.vision,com.google.android.gms.tasks,com.google.android.gms.tagmanager,com.google.android.gms.safetynet,com.google.android.gms.panorama,com.google.android.gms.plus,com.google.android.gms.maps,com.google.android.gms.nearby,     com.google.android.gms.instantapps,com.google.android.gms.identity,com.google.android.gms.iid,com.google.android.gms.tagmanager.impl,com.google.android.gms.appindexing,com.google.android.gms.location" />
 
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
@@ -18,9 +19,9 @@
         <activity
             android:name=".activities.MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar"/>
-        <activity android:name=".activities.SplashActivity"/>
-        <activity android:name=".activities.SignUpActivity">
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".activities.SplashActivity" />
+        <activity android:name=".activities.PhoneActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -34,16 +35,21 @@
             </intent-filter>
         </receiver>
 
-        <activity android:name=".activities.LoginActivity" />
+        <activity android:name=".activities.RegistationActivity" />
         <activity android:name=".activities.EmailActivity">
             <intent-filter>
-                <action android:name="android.intent.action.VIEW"/>
-                <category android:name="android.intent.category.DEFAULT"/>
-                <category android:name="android.intent.category.BROWSABLE"/>
-                <!--<data android:host="universallocator-6bc9c.firebaseapp.com" android:scheme="http"/>-->
-                <data android:host="universallocator-6bc9c.firebaseapp.com" android:scheme="https"/>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:host="universallocator-6bc9c.firebaseapp.com"
+                    android:scheme="https" />
             </intent-filter>
         </activity>
+        <activity android:name=".activities.IntroductionActivity" />
+        <activity android:name=".activities.WelcomeActivity"></activity>
     </application>
 
 </manifest>
