--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-invites:16.0.3'
     implementation 'com.google.firebase:firebase-dynamic-links:16.1.1'
     implementation 'com.google.android.gms:play-services-auth:16.0.0'
+    implementation 'com.facebook.android:account-kit-sdk:4.+'
+    implementation 'com.facebook.android:facebook-android-sdk:4.26.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
